--- a/source/Tutorials/3_Cross-species_calc_ISM.ipynb
+++ b/source/Tutorials/3_Cross-species_calc_ISM.ipynb
@@ -5,7 +5,7 @@
    "id": "6e1238fc-aa4c-4fd9-8d42-b48330e51009",
    "metadata": {},
    "source": [
-    "## **3_cross-species**\n",
+    "## **3. Cross-species**\n",
     "\n",
     "-  Train, Evaluation, and Calculate ISM\n",
     "\n",
@@ -70,7 +70,7 @@
    "id": "f8ea446d-06df-40d9-bf46-f2311bedc37b",
    "metadata": {},
    "source": [
-    "### 2.Read and filter data"
+    "### 2. Read and filter data"
    ]
   },
   {
