--- a/source/Tutorials/4_pred-newCondition_calc_TFactivity.ipynb
+++ b/source/Tutorials/4_pred-newCondition_calc_TFactivity.ipynb
@@ -5,7 +5,7 @@
    "id": "d9db57e0-fb4c-4a93-8795-f2b0dcfefb32",
    "metadata": {},
    "source": [
-    "## 4_covid19_pred  \n",
+    "## 4. COVID-19_pred  \n",
     "\n",
     "-  Train, Prediction, and Calculate TF Activity  \n",
     "\n",
