--- a/source/Tutorials/3_Cross-species_calc_ISM.ipynb
+++ b/source/Tutorials/3_Cross-species_calc_ISM.ipynb
@@ -5,7 +5,7 @@
    "id": "6e1238fc-aa4c-4fd9-8d42-b48330e51009",
    "metadata": {},
    "source": [
-    "## **3. Cross-species**\n",
+    "## **3. Cross-Species**\n",
     "\n",
     "-  Train, Evaluation, and Calculate ISM\n",
     "\n",
