--- a/source/Tutorials/4_pred-newCondition_calc_TFactivity.ipynb
+++ b/source/Tutorials/4_pred-newCondition_calc_TFactivity.ipynb
@@ -5,7 +5,7 @@
    "id": "d9db57e0-fb4c-4a93-8795-f2b0dcfefb32",
    "metadata": {},
    "source": [
-    "## 4. COVID-19_pred  \n",
+    "## **4. COVID-19_Pred**  \n",
     "\n",
     "-  Train, Prediction, and Calculate TF Activity  \n",
     "\n",
@@ -2229,7 +2229,7 @@
   "kernelspec": {
    "display_name": "py3.8_tf2.6.0",
    "language": "python",
-   "name": "py3.8_tf2.6.0"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
