--- a/source/Tutorials/4_pred-newCondition_calc_TFactivity.ipynb
+++ b/source/Tutorials/4_pred-newCondition_calc_TFactivity.ipynb
@@ -2227,7 +2227,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "py3.8_tf2.6.0",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
