--- a/source/Tutorials/1_Within-sample.ipynb
+++ b/source/Tutorials/1_Within-sample.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## **1. Within-Sample Analysis**\n",
+    "## **1. Within-sample analysis**\n",
     "\n",
     "This tutorial demonstrates the procedure for training and evaluating the XChrom model on a single sample. The workflow includes splitting the sample into training and testing sets, preprocessing the data to generate model inputs, training the model, and performing prediction and evaluation.\n",
     "\n",
@@ -2801,7 +2801,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "py3.8_tf2.6.0",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
