--- a/source/Tutorials/2_Cross-samples.ipynb
+++ b/source/Tutorials/2_Cross-samples.ipynb
@@ -5,7 +5,7 @@
    "id": "8d848f74",
    "metadata": {},
    "source": [
-    "## **2. Cross-Sample Analysis**\n",
+    "## **2. Cross-sample analysis**\n",
     "\n",
     "In this tutorial, we demonstrate how to perform prediction and evaluation on cross-sample data. We train the XChrom model using one sample and then use another distinct sample for prediction and evaluation, thereby illustrating the model's performance in handling data with inherent batch effects.\n",
     "\n",
