--- a/source/Tutorials/2_Cross-samples.ipynb
+++ b/source/Tutorials/2_Cross-samples.ipynb
@@ -7,22 +7,22 @@
    "source": [
     "## **2. Cross-sample analysis**\n",
     "\n",
-    "In this tutorial, we demonstrate how to perform prediction and evaluation on cross-sample data. We train the XChrom model using one sample and then use another distinct sample for prediction and evaluation, thereby illustrating the model's performance in handling data with inherent batch effects.\n",
+    "In this tutorial, we demonstrate how to perform prediction and evaluation on cross-sample scenario. We train XChrom model using one sample and then using another independent sample as the test set to evaluate the model’s transferability to different samples, thereby illustrating the model's performance in handling data with inherent batch effects.\n",
     "\n",
-    "We utilized a publicly available dataset of single-cell multiome data collected from bone marrow mononuclear cells (BMMCs) of 12 healthy human donors. The dataset features a nested batch design where some donor samples were measured at multiple sites while others were measured at a single site. All samples were prepared using a standardized protocol across four different sites. The data was subsequently annotated to identify cell types and remove doublets.\n",
+    "We utilized a publicly available dataset of single-cell multiome data collected from bone marrow mononuclear cells (BMMCs) of 12 healthy human donors. The dataset includes multiple batches arising from donor sources and sequencing platforms. All samples were prepared using a standardized protocol. The data was subsequently annotated to identify cell types and remove doublets.\n",
     "\n",
     "- **Data Preprocessing**\n",
-    "As an example, we extracted two samples labeled `s1d1` and `s2d1` (where `s` denotes site and `d` denotes donor). We used `s1d1` as the training set and `s2d1` as the test set. For the training scATAC-seq data, we performed partitioning by cells and peaks to generate training/validation data for model input, following the same procedure described in the `Within-Sample` tutorial. For the test scATAC-seq data, we used the entire test set for evaluation.\n",
+    "As an example, we extracted two samples labeled `s1d1` and `s2d1` (where `s` denotes sequencing site and `d` denotes donor). We used `s1d1` as the training set and `s2d1` as the test set. For the training scATAC-seq data, we performed partitioning by cells and peaks to generate training/validation data for model input, following the same procedure described in the `Within-Sample` tutorial. For the test scATAC-seq data, we used the entire test set for evaluation.\n",
     "\n",
     "For the scRNA-seq data, we first performed batch effect correction on both `s1d1` and `s2d1` samples using Harmony (though alternative methods such as Scanorama, scVI, or ingest could be employed). The batch-corrected cell embeddings-typically named `'X_pca_harmony'`-were stored in the respective scRNA-seq datasets of both samples and served as input for model training and prediction.\n",
     "\n",
     "- **Model Training**\n",
-    "During training, the model accepts two types of inputs: ① DNA sequences (one-hot encoded, 1 × sequence length) and ② cell embeddings (cell number × embedding dimension matrix). The model is trained to predict sequence accessibility across cells. Importantly, the cell embeddings used here are derived from batch-corrected scRNA-seq data from both samples.\n",
+    "XChrom takes two inputs: ① DNA sequences (one-hot encoded, 1 × 1344bp) and ② cell embeddings (cell number × 32). The model is trained to predict chromatin accessibility probabilities for each genomic region across all cells. Importantly, the cell embeddings used here are derived from batch-corrected scRNA-seq data from both samples.\n",
     "\n",
     "- **Prediction and Evaluation**\n",
-    "Following training, we evaluated the model's capability to predict chromatin accessibility in the preprocessed test sample from two perspectives:\n",
-    "    - **Prediction Accuracy:** Qterisic cun-recll curve (auPRC).\n",
-    "    - **Biological Consistency:** Assessed using the neighbor score (NS) to measure cross-modality neighborhood concordance and the label score (LS) to evaluate the consistency of cell-type labels within local neighborhoods."
+    "After training, we evaluate the preprocessed test sample from two perspectives:                              \n",
+    "    - **Binary classification metrics:** auROC and auPRC, as primary evaluation metrics, which were summarized at the overall, per-cell and per-peak levels.\n",
+    "    - **Cell state fidelity:** Using the neighbor score (NS) to quantify cross-modality neighborhood concordance by comparing scATAC-seq and scRNA-seq data, and the label score (LS) to evaluate the consistency of cell-type labels within local neighborhoods.Both metrics depend on a parameter k, the number of nearest neighbors in the cell-cell graph."
    ]
   },
   {
@@ -31,7 +31,7 @@
    "metadata": {},
    "source": [
     "### 1. Download Data (BMMCs: s1d1-s2d1)  \n",
-    "- The original data is sourced from [GEO accession GSE194122](https://www.ncbi.nlm.nih.gov/geo/query/acc.cgi?acc=GSE194122). We extracted samples s1d1 and s2d1 from this dataset and made them available on https://doi.org/10.5281/zenodo.16959682.  \n",
+    "- The original data is sourced from [GEO accession GSE194122](https://www.ncbi.nlm.nih.gov/geo/query/acc.cgi?acc=GSE194122). We extracted samples s1d1 and s2d1 from this dataset and made them available at: https://doi.org/10.5281/zenodo.16959682.  \n",
     "- After downloading, save the data as `'./data/2_cross_samples/s1d1_s2d1.h5ad'`.  \n",
     "- Download the human genome file from:  \n",
     "  [https://hgdownload.soe.ucsc.edu/goldenPath/hg38/bigZips/hg38.fa.gz](https://hgdownload.soe.ucsc.edu/goldenPath/hg38/bigZips/hg38.fa.gz)  \n",
@@ -296,7 +296,7 @@
    "id": "7b99ffd7-e43f-4b6c-a924-6c97a89ccf0e",
    "metadata": {},
    "source": [
-    "Filtering was performed separately on the scATAC data of both the training and testing samples. We removed peaks accessible in fewer than 1% of cells and excluded sequences not belonging to chromosomes chr1-22, X, or Y. The filtered scATAC data was saved in `'./data/2_cross_samples'`.\n",
+    "Filtering was performed on the scATAC data of both the training and testing samples separately. We removed peaks accessible in fewer than 1% of cells and excluded sequences not belonging to chromosomes chr1-22, X, or Y. The filtered scATAC data was saved in `'./data/2_cross_samples'`.\n",
     "\n",
     "Similarly, the scRNA data of both training and testing samples were filtered to remove genes expressed in fewer than 1% of cells."
    ]
@@ -314,9 +314,8 @@
    "id": "be3a4728-67e7-4e28-a2e7-15a9b1646f00",
    "metadata": {},
    "source": [
-    "We used the Harmony tool to perform batch correction on the two samples. First, the filtered samples were concatenated. Harmony applied PCA to embed the transcriptomic expression profiles into a 32-dimensional space, followed by an iterative process to remove dataset-specific batch effects. This ultimately generated batch-corrected embeddings labeled `'X_pca_harmony'`, which represents each cell and serves as the raw cell embeddings for subsequent model input.  \n",
-    "\n",
-    "Alternatively, dimensionality reduction results from other batch correction tools—such as scVI or certain biological large language models—can also be used as raw cell embeddings. The results should be stored in `RNA.obsm` for model access."
+    "- We use Harmony to correct batch effects between the two samples. After filtering, we concatenate the samples, perform PCA (e.g., 32 components) to embed the transcriptomic profiles, and then run Harmony on the PCs to iteratively remove dataset-specific effects. This yields batch-corrected embeddings stored as `RNA.obsm['X_pca_harmony']`, which represent each cell and serve as the raw cell embeddings for subsequent model input.\n",
+    "    - Alternatively, latent embeddings from other integration methods—such as scVI or biology foundation models—can also be used as raw cell embeddings. Save the resulting array in `RNA.obsm[cellembed_raw]` (shape: n_cells × d) so the model can access it."
    ]
   },
   {
@@ -435,7 +434,7 @@
    "id": "6b94cf1e-bc2a-4249-bdc8-84c8603d15b4",
    "metadata": {},
    "source": [
-    "Now we have raw cell embeddings in `RNA['X_pca_harmony']`, and cell types in `RNA['cell_type']` as labels."
+    "Now we have raw cell embeddings in `RNA.obsm['X_pca_harmony']`, and cell types in `RNA.obs['cell_type']` as labels."
    ]
   },
   {
@@ -443,7 +442,7 @@
    "id": "b61ed101-7cc4-466f-8495-40bdda0f716e",
    "metadata": {},
    "source": [
-    "### 4. Train/test data prepare"
+    "### 4. Training/test data prepare"
    ]
   },
   {
@@ -546,9 +545,13 @@
    "id": "1bdb0d3f-ce05-4c6c-b881-59635ef9fcc9",
    "metadata": {},
    "source": [
-    "We use the preprocessed data from the s1d1 training set obtained above as sequence inputs for the model. The `input_folder` should contain all files generated during preprocessing. The batch-corrected `X_pca_harmony` embeddings derived from scRNA data are used as raw cell embeddings and serve as cell identity inputs to the model. If using dimensionality reduction results from other methods, they must be stored in `cell_embedding_ad.obsm` under the key `cellembed_raw` for extraction.\n",
+    "- We use the preprocessed data from the s1d1 training set obtained above as sequence inputs for the model. The `input_folder` should contain all files generated during preprocessing. The batch-corrected `X_pca_harmony` embeddings derived from scRNA data are used as raw cell embeddings and serve as cell identity inputs to the model. If using dimensionality reduction results from other methods, they must be stored in `cell_embedding_ad.obsm` under the key `cellembed_raw` for extraction.                      \n",
     "\n",
-    "If you wish to compute NS and LS for model parameters at every training epoch, you need to set `trackscore = True` and specify the `celltype` in either the RNA or ATAC H5AD file. The model is set to train for 1000 epochs by default, but an early stopping mechanism will be triggered if the increase in training auROC remains below 1e-6 for 50 consecutive epochs. The `save_freq` parameter determines the frequency of saving model parameters, with a default value of 1000 (meaning intermediate model parameters are not saved during training)."
+    "- If you want to compute NS(k=100) and LS(k=100) for monitoring the XChrom training process, you need to set `trackscore = True` and specify the `celltype` in either the RNA or ATAC H5AD file.                           \n",
+    "\n",
+    "- The model is set to train for 1000 epochs by default, but an early stopping mechanism will be triggered if the increase in training auROC remains below 1e-6 for 50 consecutive epochs.                               \n",
+    "        \n",
+    "- The `save_freq` parameter determines the frequency of saving model parameters, with a default value of 1000 (meaning intermediate model parameters are not saved during training)."
    ]
   },
   {
@@ -2761,9 +2764,9 @@
    "id": "b84b8fd9-6473-467f-92d4-e4ba2375339e",
    "metadata": {},
    "source": [
-    "Plotting training metrics helps monitor overfitting and evaluate the final model performance. Ideally, after a certain number of epochs, the metric curves should stabilize and remain steady.\n",
+    "Plotting training metrics to monitor overfitting and evaluate the final model performance. Ideally, after a certain number of epochs, the validation curves plateau (i.e., remain stable).\n",
     "\n",
-    "The metrics computed during training are saved in `./data/2_cross_samples/train_out/history.pickle`. They can be loaded using the following corrected code:\n",
+    "The metrics computed during training are saved in `./data/2_cross_samples/train_out/history.pickle`. Load them with:     \n",
     "\n",
     "```python\n",
     "import pickle\n",
@@ -2771,7 +2774,9 @@
     "    history = pickle.load(f)\n",
     "```\n",
     "\n",
-    "You can then use this `history` object to plot training/validation metrics such as loss, auROC, and auPRC curves to monitor model performance throughout training."
+    "You can then use this `history` object to plot training/validation metrics (e.g., loss, auROC/auPRC, NS/LS) over epochs.                   \n",
+    "\n",
+    "The function `plot_train_history()` will automatically detect whether NS and LS values have been computed during training. If these metrics are available in the history data, they will be automatically included in the training metric plots along with other evaluation metrics such as loss, auROC, and auPRC.                        "
    ]
   },
   {
@@ -2814,17 +2819,15 @@
    "source": [
     "The following metrics will be computed on the s2d1 test set data:\n",
     "\n",
-    "- **Prediction Accuracy**:  \n",
-    "  Evaluation of cross-sample prediction accuracy using:\n",
-    "  - **auROC** (Area Under the Receiver Operating Characteristic curve)\n",
-    "  - **auPRC** (Area Under the Precision-Recall curve)\n",
+    "- **Binary classification metrics**:  \n",
+    "  - **(overall, per cell, per peak)auROC** \n",
+    "  - **(overall, per cell, per peak)auPRC** \n",
+    "  \n",
+    "- **Cell state fidelity**:  \n",
+    "  - **Neighbor Score (NS) (k=10, 50, 100)**\n",
+    "  - **Label Score (LS) (k=10, 50, 100)**\n",
     "\n",
-    "- **Biological Consistency**:  \n",
-    "  Assessment of cross-modality neighborhood consistency and cell label consistency in the cross-sample scenario using:\n",
-    "  - **Neighbor Score (NS)**: Quantifies the percentage of overlapping neighbors between independently constructed scRNA(`'X_pca' or 'X_pca_harmony'`) and scATAC nearest-neighbor graphs.\n",
-    "  - **Label Score (LS)**: For a given nearest-neighbor graph, label score quantifies what percentage of each cell’s neighbors share its same label in a given neighborhood. The provided ground-truth cell type annotations will be used directly as the cell labels for calculating the Label Score (LS).\n",
-    "\n",
-    "This combination of quantitative accuracy metrics (auROC/auPRC) and biological fidelity metrics (NS/LS) provides a comprehensive evaluation of the model's performance on unseen data from a different sample. And these will help validate the model's performance in handling batch effects and maintaining biological consistency when predicting across different samples. The evaluation will be conducted at multiple neighborhood scales (e.g., k=100, 50, 10) to assess consistency across different resolutions."
+    "This combination of binary classification metrics and cell state fidelity provides a comprehensive evaluation of the model's performance on unseen data from a different sample. "
    ]
   },
   {
@@ -2887,8 +2890,10 @@
     "- If `save_pred=True`, the prediction results will be saved as:   \n",
     "  - `/2_cross_samples/eval_out/crosssamples_pred.npy`  \n",
     "- If `scatter_plot=True`, the following relationships will be visualized and saved as PDF files in `/2_cross_samples/eval_out/`:  \n",
-    "  - Per-cell auROC/auPRC vs. log2(peak counts)  \n",
-    "  - Per-peak auROC/auPRC vs. log2(cell counts)"
+    "  - (i) auROC per cell vs. log-transformed peak counts per cell; \n",
+    "  - (ii) auPRC per cell vs. log-transformed peak counts per cell; \n",
+    "  - (iii) auROC per peak vs. log-transformed cell counts per peak; \n",
+    "  - (iv) auPRC per peak vs. log-transformed cell counts per peak. "
    ]
   },
   {
