--- a/source/Tutorials/4_pred-newCondition_calc_TFactivity.ipynb
+++ b/source/Tutorials/4_pred-newCondition_calc_TFactivity.ipynb
@@ -7,20 +7,21 @@
    "source": [
     "## **4. COVID-19 analysis**  \n",
     "\n",
-    "-  Train, Prediction, and Calculate TF Activity  \n",
+    "In this tutorial, we demonstrate how to use publicly available paired scRNA and scATAC data to predict scATAC profiles for unpaired samples that only have scRNA data, and to calculate and analyze transcription factor (TF) motif activity across different sample conditions in the dataset.\n",
     "\n",
-    "In this tutorial, we demonstrate how to use publicly available paired scRNA and scATAC data to predict scATAC profiles for unpaired samples that only have scRNA data, and to calculate and analyze transcription factor (TF) activity across different sample conditions in the dataset.\n",
-    "\n",
-    "We use a publicly available 10x Genomics Multiome dataset from a healthy donor of human peripheral blood mononuclear cells (PBMCs) (PBMC10k) as training data. This model is used to predict scATAC profiles for unpaired scRNA data from COVID-19-infected donors,it has been annotated cell types and batch information. We first performed batch correction on these samples and the public PBMC data using the Harmony tool, resulting in batch-corrected cell embeddings stored in `RNA.obsm['X_pca_harmony']`. The processed COVID-19 scRNA data and the paired PBMC10k scRNA and scATAC data (filtered using a 1% threshold for PBMC10k) have been uploaded to https://doi.org/10.5281/zenodo.16959682. For detailed procedures, please refer to https://github.com/Miaoyuanyuan777/XChrom_analysis.\n",
+    "We used a public paired scRNA/ATAC-seq dataset from healthy donors (PBMC10k, 10x Genomics) to train an XChrom model, and then predicted the epigenomic features of COVID-19 patients based on their scRNA-seq data,it has been annotated cell types and batch information. We first performed batch correction on COVID-19 and PBMC10k using the Harmony, resulting in batch-corrected cell embeddings stored in `RNA.obsm['X_pca_harmony']`. The processed COVID-19 scRNA data and the paired PBMC10k scRNA and scATAC data (filtered using a 1% threshold for PBMC10k) have been uploaded to https://doi.org/10.5281/zenodo.16959682. For detailed procedures, please refer to https://github.com/Miaoyuanyuan777/XChrom_analysis.\n",
     "\n",
     "- **Data Preprocessing**  \n",
-    "In this tutorial, we use the paired PBMC10k data as the training set to train the model, then predict scATAC profiles for the COVID-19 data. For the training scATAC data, we split it by cells and peaks to generate training/validation data for model input, following the same procedure as in the `1_within-sample` tutorial. For the scRNA data, we directly use the processed batch-corrected cell embeddings (`RNA.obsm['X_pca_harmony']`) as input for model training and prediction.\n",
+    "In this tutorial, we use the paired scRNA/ATAC-seq PBMC10k data as the training set, then predict scATAC profiles for the COVID-19 data. For the training scATAC-seq data, we split it by cells and peaks to generate training/validation data for model input, following the same procedure as in the `1_within-sample` tutorial. For the scRNA-seq data, we directly use the processed batch-corrected cell embeddings (`RNA.obsm['X_pca_harmony']`) as input for model training and prediction.\n",
     "\n",
     "- **Model Training**  \n",
-    "During training, the model accepts two types of inputs: ① DNA sequences (one-hot encoded, 1 × sequence length) and ② cell embeddings (cell number × embedding dimension matrix). The model is trained to predict sequence accessibility across cells. Importantly, the cell embeddings used here are derived from batch-corrected scRNA-seq data from both samples.\n",
+    "During training, the model accepts two types of inputs: ① DNA sequences (one-hot encoded, 1 × 1344bp) and ② cell embeddings (cell number × 32). The model is trained to predict chromatin accessibility probabilities for each genomic region across all cells. Importantly, the cell embeddings used here are derived from batch-corrected scRNA-seq data from both samples.\n",
     "\n",
     "- **Model Prediction**  \n",
-    "After training, we use the COVID-19 `RNA.obsm['X_pca_harmony']` as model input for prediction. Note: Since the COVID-19 data lacks paired scATAC measurements, we can only predict the accessibility of the training set sequences in each COVID-19 cell."
+    "After training, we use the COVID-19 `RNA.obsm['X_pca_harmony']` as model input for prediction. Note: Since the COVID-19 data lacks paired scATAC measurements, we can only predict the accessibility of the training set sequences in each COVID-19 cell.\n",
+    "\n",
+    "- **Interpretability analysis** \n",
+    "We calculated the TF motif activity at the single-cell level, defined by the difference predicted by XChrom when the motif sequence was inserted into the background sequence. Then we checked if XChrom could identify well-established cell type-specific TF activities."
    ]
   },
   {
@@ -34,7 +35,7 @@
     "    [https://cf.10xgenomics.com/samples/cell-arc/2.0.0/pbmc_granulocyte_sorted_10k/pbmc_granulocyte_sorted_10k_filtered_feature_bc_matrix.h5](https://cf.10xgenomics.com/samples/cell-arc/2.0.0/pbmc_granulocyte_sorted_10k/pbmc_granulocyte_sorted_10k_filtered_feature_bc_matrix.h5)  \n",
     "    The original COVID-19 data is available at:  \n",
     "    [https://nubes.helmholtz-berlin.de/s/wqg6tmX4fW7pci5/download](https://nubes.helmholtz-berlin.de/s/wqg6tmX4fW7pci5/download)  \n",
-    "    We have preprocessed this data, which included filtering the paired PBMC10k data and extracting only the scRNA data from mild and severe donor samples in the COVID-19 dataset for analysis. Batch correction was also applied. The preprocessed data can be downloaded from the https://doi.org/10.5281/zenodo.16959682.\n",
+    "    We have preprocessed this data, including filtering the paired PBMC10k data and extracting only the scRNA data from mild and severe samples in the COVID-19 dataset for analysis. Batch correction was also applied. The preprocessed data can be downloaded from the https://doi.org/10.5281/zenodo.16959682.\n",
     "\n",
     "-   Download the PBMC10k data and save it as:  \n",
     "    `'./data/4_pred_newCondition/pbmc10k_atac.h5ad'`  \n",
@@ -43,7 +44,7 @@
     "\n",
     "-   Download the COVID-19 data and save it as:  \n",
     "    `'./data/4_pred_newCondition/covid_rna_harmony.h5ad'`  \n",
-    "    (This file provides the model input for analysis)\n",
+    "    (This file provides the model input for inferring TF activity)\n",
     "\n",
     "-   Download the motif database file from:  \n",
     "    [https://meme-suite.org/meme/meme-software/Databases/motifs/motif_databases.12.27.tgz](https://meme-suite.org/meme/meme-software/Databases/motifs/motif_databases.12.27.tgz)  \n",
@@ -84,7 +85,7 @@
    "id": "94b0534d-a56b-46ad-aaee-ab44a1525bc5",
    "metadata": {},
    "source": [
-    "### 2. train/test data prepare"
+    "### 2. Training/test data prepare"
    ]
   },
   {
@@ -142,7 +143,7 @@
    "id": "7631caa1-b54c-4780-8421-592693ca25d5",
    "metadata": {},
    "source": [
-    "### 3. train the model"
+    "### 3. Train the model"
    ]
   },
   {
@@ -150,9 +151,13 @@
    "id": "ab699c7c-6e18-419b-89c4-a4a4f5f359e5",
    "metadata": {},
    "source": [
-    "We use the preprocessed data from the PBMC10k training set obtained above as sequence inputs for the model. The `input_folder` should contain all files generated during preprocessing. The batch-corrected `X_pca_harmony` embeddings derived from scRNA data are used as raw cell embeddings and serve as cell identity inputs to the model. If using dimensionality reduction results from other methods, they must be stored in `cell_embedding_ad.obsm` under the key `cellembed_raw` for extraction.\n",
+    "We use the preprocessed data from the PBMC10k training set obtained above as sequence inputs for the model. The `input_folder` should contain all files generated during preprocessing. The batch-corrected `X_pca_harmony` embeddings derived from scRNA data are used as raw cell embeddings and served as cell identity inputs to the model. If using dimensionality reduction results from other methods, they must be stored in `cell_embedding_ad.obsm` under the key `cellembed_raw` for extraction.                                                  \n",
     "\n",
-    "If you wish to compute NS and LS for model parameters at every training epoch, you need to set `trackscore = True` and specify the `celltype` in either the RNA or ATAC H5AD file. The model is set to train for 1000 epochs by default, but an early stopping mechanism will be triggered if the increase in training auROC remains below 1e-6 for 50 consecutive epochs. The `save_freq` parameter determines the frequency of saving model parameters, with a default value of 1000 (meaning intermediate model parameters are not saved during training)."
+    "- If you want to compute NS(k=100) and LS(k=100) for monitoring the XChrom training process, you need to set `trackscore = True` and specify the `celltype` in either the RNA or ATAC H5AD file.                                       \n",
+    "\n",
+    "- The model is set to train for 1000 epochs by default, but an early stopping mechanism will be triggered if the increase in training auROC remains below 1e-6 for 50 consecutive epochs.                                   \n",
+    "        \n",
+    "- The `save_freq` parameter determines the frequency of saving model parameters, with a default value of 1000 (meaning intermediate model parameters are not saved during training).                                                            "
    ]
   },
   {
@@ -1948,9 +1953,9 @@
    "id": "bce7e85c-34be-4866-831c-5c4555335827",
    "metadata": {},
    "source": [
-    "Plotting training metrics helps monitor overfitting and evaluate the final model performance. Ideally, after a certain number of epochs, the metric curves should stabilize and remain steady.\n",
+    "Plotting training metrics to monitor overfitting and evaluate the final model performance. Ideally, after a certain number of epochs, the validation curves plateau (i.e., remain stable).       \n",
     "\n",
-    "The metrics computed during training are saved in `./data/4_pred_newCondition/train_out/history.pickle`. They can be loaded using the following code:\n",
+    "The metrics computed during training are saved in `./data/4_pred_newCondition/train_out/history.pickle`. Load them with:   \n",
     "\n",
     "```python\n",
     "import pickle\n",
@@ -1958,7 +1963,7 @@
     "    history = pickle.load(f)\n",
     "```\n",
     "\n",
-    "This `history` object contains all training metrics (loss, auROC, auPRC, etc.) recorded during the training process, which can be used to generate plots and analyze model performance.  \n",
+    "You can then use this `history` object to plot training/validation metrics (e.g., loss, auROC/auPRC, NS/LS) over epochs.  \n",
     "\n",
     "The function `plot_train_history()` will automatically detect whether NS and LS values have been computed during training. If these metrics are available in the history data, they will be automatically included in the training metric plots along with other evaluation metrics such as loss, auROC, and auPRC. "
    ]
@@ -1993,12 +1998,12 @@
    "id": "70bdc417-e75e-4d76-b675-9f4d784c9717",
    "metadata": {},
    "source": [
-    "### 4. calculate TF activity\n",
-    "We performed motif insertion on trained XChrom to compute a TF activity score for each TF for each cell. \n",
+    "### 4. Calculate TF activity\n",
+    "We performed motif insertion on trained XChrom to compute a TF activity score for each TF for each cell.                    \n",
     "\n",
-    "Specifically, we first generate 1,000 genomic background sequences by performing dinucleotide shuffling of 1,000 randomly sampled peaks from the training sequences atlas using `fasta ushuffle`. For each TF in the motif database, we sampled a motif sequence from the PWM and inserted it into the center of each of the genomic background sequences. We ran forward passes through the model for both the motif-inserted sequences and background sequences to predict accessibility across all cells, making difference as the motif influence for each sequence. We average this influence score across all 1,000 sequences for each cell to generate a cell-level prediction of raw TF activity. \n",
+    "- Specifically, we first generate 1000 genomic background sequences (determined by `n_samples`) by performing dinucleotide shuffling of 1000 randomly sampled peaks from the training sequences atlas using `fasta ushuffle`. For each TF in the motif database, we sampled 1000 motif sequences(determined by `n_motif_instances`) from the PWM and inserted each instance at the center of every background sequence. We run forward passes for both the motif-inserted sequences and their background counterparts to predict accessibility across all cells, and define the motif influence for each sequence as the difference between the two predictions. Finally, we average this influence across all 1000 sequences per cell to obtain a cell-level raw TF activity score.                      \n",
     "\n",
-    "- for this，you must install fasta_ushuffle first with: `conda install bioconda::fasta_ushuffle`"
+    "- For this，you must install fasta_ushuffle first with: `conda install bioconda::fasta_ushuffle`                         "
    ]
   },
   {
@@ -2071,7 +2076,7 @@
    "id": "fb8f8b63-5a39-4be6-abf3-a866cf268df6",
    "metadata": {},
    "source": [
-    "Note: Since the COVID-19 data lacks paired scATAC data, background sequences can only be sampled from the training set sequences. "
+    "Note: Since the COVID-19 data lacks paired scATAC data, background sequences can only be sampled from the training set. "
    ]
   },
   {
@@ -2151,7 +2156,7 @@
     "If you do not need to calculate activities for all motifs, you can keep only the motif files you require in the `motif_dir`. \n",
     "\n",
     "Set `regenerate_bg_h5=False` if you have already generated the background sequences in H5 format,\n",
-    "Set `regenerate_motif_h5=False` if you have already generated H5 files for each motif"
+    "Set `regenerate_motif_h5=False` if you have already generated H5 files for each motif."
    ]
   },
   {
@@ -2217,11 +2222,11 @@
    "id": "3b7f9512-cde2-4a49-89fc-c53ebade2c0b",
    "metadata": {},
    "source": [
-    "The `plot_motif_activity()` function performs z-score normalization of the calculated TF activities across cell types. In the resulting visualization:\n",
+    "The `plot_motif_activity()` function performs z-score normalization of the calculated TF activity across cell types. In the resulting visualization:\n",
     "- **Red** indicates that CEBPB shows relatively higher activity in that cell type\n",
     "- **Blue** indicates relatively lower activity\n",
     "\n",
-    "This normalization allows for clear comparison of transcription factor activity patterns across different cell types and conditions."
+    "This normalization allows for clear comparison of TF activity patterns across different cell types and conditions."
    ]
   }
  ],
