--- a/source/quick_start.ipynb
+++ b/source/quick_start.ipynb
@@ -9,31 +9,25 @@
     }
    },
    "source": [
-    "# XChrom Quick Start Guide\n",
+    "# XChrom quick start guide\n",
     "\n",
-    "This notebook provides a quick start example for training XChrom tool. \n",
-    "XChrom is designed for chromatin accessibility prediction using deep learning models. The notebook demonstrates how to load example data, train a model, and visualize the training results.\n",
+    "This notebook walks users through a tiny end-to-end run to verify that XChrom is installed and working. We  will load example data, train a small model, and visualize the training history.\n",
     "\n",
-    "### Overview\n",
-    "- **Purpose:**                       \n",
-    "  To help users quickly verify that XChrom is installed and functioning correctly by running a small-scale test.\n",
-    "- **Workflow:**\n",
-    "    1. Import the XChrom package.\n",
-    "    2. List and access the example data provided for testing.\n",
-    "    3. Train the XChrom model using the example data.\n",
-    "    4. Visualize and save the training history.\n",
+    "### Workflow:\n",
+    "- Import the XChrom package.\n",
+    "- List and access the bundled demo data.\n",
+    "- Train XChrom model using the demo data.\n",
+    "- Save the model and plot the training curves.\n",
     "\n",
-    "### Data\n",
-    "- The test data consists of a small subset (100 cells and 1000 peaks) sampled from the original dataset.\n",
-    "- Preprocessed training and test data are provided for convenience.\n",
-    "- Data files are located in the 'xchrom/data/train_data/' directory.\n",
-    "- The raw cellembedding h5ad file is located in the 'xchrom/data/test_rna.h5ad' directory.\n",
+    "### Demo data (model input)\n",
+    "- The demo data consists of a small subset (100 cells and 1000 peaks) sampled from the original dataset.\n",
+    "- Preprocessed training and test data are provided in 'xchrom/data/train_data/' directory.\n",
+    "- The raw cell embeddings h5ad file is provided in the 'xchrom/data/test_rna.h5ad' directory.\n",
     "\n",
     "### Output\n",
-    "- The trained model is saved in the './data/quick_start/E1000best_model.h5'.\n",
-    "- The training history is saved in the './data/quick_start/history.pickle', and './data/quick_start/train_history_plot.pdf'.\n",
-    "\n",
-    "**Note:** This example is for demonstration and testing purposes only. The dataset is small and not intended for research conclusions.\n"
+    "- Trained model: './data/quick_start/E1000best_model.h5'\n",
+    "- Training history (pickle): './data/quick_start/history.pickle'\n",
+    "- Training history plot (PDF): './data/quick_start/train_history_plot.pdf'"
    ]
   },
   {
@@ -333,9 +327,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "py3.8_tf2.6.0",
    "language": "python",
-   "name": "python3"
+   "name": "py3.8_tf2.6.0"
   },
   "language_info": {
    "codemirror_mode": {
@@ -347,7 +341,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.8.15"
   }
  },
  "nbformat": 4,
